--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="3.4.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="4.1.js"></script>
 </head>
 <body>
-    <h1>HELLO WORLD</h1>
+    <div class="computer">
+        <div class="screen">
     
+            <h1>HELLO WORLD JS</h1>
+            <p>Appuie sur le bouton</p>
+        </div>  
+            <div class="result">
+                <button onclick="surface()">Appuie</button>
+                <p id="a"></p>
+                <p id="b"></p>
+                <p id="c"></p>
+            </div>
+    </div>    
 </body>
 </html>
