--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="5.js"></script>
+    <script type="text/javascript" src="5.1.js"></script>
 </head>
 <body>
     <div class="computer">
@@ -16,10 +16,7 @@
             <p>Appuie sur le bouton</p>
         </div>  
             <div class="result">
-                <button onclick="surface()">Appuie</button>
-                <p id="a"></p>
-                <p id="b"></p>
-                <p id="c"></p>
+                <button onclick="askTvSeries()">Appuie</button>
             </div>
     </div>    
 </body>
